# sudoku-solver

./: Cargo.toml  README.md
assets/: constraints.csv
src/: constraints.rs  lib.rs  main.rs  state.rs
