[package]
name = "sudoku-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
csv = "1.3.0"
env_logger = "0.10.0"
log = "0.4.20"
thiserror = "1.0.49"
